animation for some images, improved header

--- a/_work/statistics.html
+++ b/_work/statistics.html
@@ -183,9 +183,9 @@ function init() {
 </head>
 <body onload="init();">
 <div id="header">
-<a href="/ov.html#anchor_statistics_br3" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<a href="/ov.html#statistics_br3" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
 <div class="title">Grundlagen</div>
-<a href="/ov.html#anchor_statistics_br3" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<a href="/ov.html#statistics_br3" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
 </div>
 {{matches}}
 </body>
