--- a/info/gesucht.html
+++ b/info/gesucht.html
@@ -21,9 +21,9 @@ div.content {
 </head>
 <body>
   <div id="header">
-  <a href="/ov.html#anchor_wunsch" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <a href="/ov.html#wunsch" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
   <div class="title">Gesucht!</div>
-  <a href="/ov.html#anchor_wunsch" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <a href="/ov.html#wunsch" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
   </div>
   <div class="content">&nbsp;</div>
 </body>
