--- a/info/info.html
+++ b/info/info.html
@@ -32,9 +32,9 @@ img.bullet {
 </head>
 <body>
 <div id="header">
-<a href="/ov.html#anchor_divinfo" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<a href="/ov.html#divinfo" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
 <div class="title">Allgemeine Infos</div>
-<a href="/ov.html#anchor_divinfo" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<a href="/ov.html#divinfo" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
 </div>
 
 <table cellspacing="0" cellpadding="0">
