--- a/info/wunschzettel.html
+++ b/info/wunschzettel.html
@@ -55,9 +55,9 @@ img.logo {
 </head>
 <body>
 <div id="header">
-<a href="/ov.html#anchor_wunsch" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<a href="/ov.html#wunsch" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
 <div class="title">Ein Wunschzettel</div>
-<a href="/ov.html#anchor_wunsch" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<a href="/ov.html#wunsch" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
 </div>
 
 <img class="ball1" src="../image/ball32.png" alt="Volleyball" />
