--- a/uld/grundlagen/index.html
+++ b/uld/grundlagen/index.html
@@ -14,9 +14,9 @@ body {
 <body>
 
   <div id="header">
-  <a href="/ov.html#anchor_grundlagen_br4" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <a href="/ov.html#grundlagen_br4" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
   <div class="title">Grundlagen</div>
-  <a href="/ov.html#anchor_grundlagen_br4" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <a href="/ov.html#grundlagen_br4" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
   </div>
 
   <h1 class="tactics">Grundlagen</h1>
