--- a/uld/grundlagen3/blockinfo/block.html
+++ b/uld/grundlagen3/blockinfo/block.html
@@ -85,9 +85,9 @@ div.idee {
 <body>
 
   <div id="header">
-  <a href="/uld/grundlagen3/#anchor_block" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <a href="/uld/grundlagen3/#block" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
   <div class="title">Infos zum Block</div>
-  <a href="/uld/grundlagen3/#anchor_block" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <a href="/uld/grundlagen3/#block" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
   </div>
 
   <table cellspacing="0" cellpadding="0">
