--- a/uld/statistics3.html
+++ b/uld/statistics3.html
@@ -183,9 +183,9 @@ function init() {
 </head>
 <body onload="init();">
 <div id="header">
-<a href="/ov.html#anchor_statistics_br3" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<a href="/ov.html#statistics_br3" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
 <div class="title">Grundlagen</div>
-<a href="/ov.html#anchor_statistics_br3" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<a href="/ov.html#statistics_br3" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
 </div>
 <h4 id="m1" class="expandable" style="">21.Jän Volleystars - Brückl hotvolleys 3</h4>
 <div id="m1_2" class="match">
@@ -754,7 +754,7 @@ function init() {
 </tr>
 
   </table>
-  
+
 </div>
 <h4 id="m3" class="expandable" style="">13.Jän Brückl hotvolleys - WSL</h4>
 <div id="m3_2" class="match">
@@ -892,7 +892,7 @@ function init() {
 </tr>
 
   </table>
-  
+
 </div>
 <h4 id="m4" class="expandable" style="">07.Jän LL: WSL - Brückl hotvolleys</h4>
 <div id="m4_2" class="match">
@@ -1052,7 +1052,7 @@ function init() {
 </tr>
 
   </table>
-  
+
 </div>
 <h4 id="m5" class="expandable" style="">26.Nov WSL M - Brückl hotvolleys 3</h4>
 <div id="m5_2" class="match">
@@ -3105,7 +3105,7 @@ function init() {
 </tr>
 
   </table>
-  
+
 </div>
 <h4 id="m11" class="expandable" style="">26.Okt Brückl hotvolleys 3 - Villach 4</h4>
 <div id="m11_2" class="match">
