--- a/_work/statistics.match.html
+++ b/_work/statistics.match.html
@@ -1,5 +1,5 @@
 <h4 id="m{{index}}" class="expandable" style="">{{info}}</h4>
-<div id="m{{index}}_2" class="match">
+<div id="m{{index}}_2" class="match expanded_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
