--- a/_work/statistics.points.html
+++ b/_work/statistics.points.html
@@ -1,5 +1,5 @@
 <h5 id="mx{{index}}" class="expandable" style="">Verlauf</h5>
-<div id="mx{{index}}_2" class="container">
+<div id="mx{{index}}_2" class="container expanded_container">
 {{sets}}
 <br clear="all">
 </div>
