--- a/_work/svg/container.html
+++ b/_work/svg/container.html
@@ -50,20 +50,102 @@ body {
   font-weight: bold;
 }
 
-div.canvas_svg {
+div#svgcanvas {
   position: absolute;
   left: 0;
   top: 50px;
   width: 100%;
   min-width: 100px;
   bottom: 22px;
-  background-color: #d3d3d3;
+  background-color: aliceblue;
 }
-div.canvas_svg > svg {
+div#svgcanvas > svg {
   height: 100%;
   max-width: 100%;
   display: block;
   margin: auto;
+}
+
+div#svgcanvas > div.animation_cmds {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 40px;
+  width: 78px;
+  border-radius: 3px;
+  background-color: darkgray;
+  display: none;
+}
+div#svgcanvas > div.animation_cmds > div {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  height: 36px;
+  width: 36px;
+  border-radius: 2px;
+  background-color: lightgray;
+  overflow: hidden;
+}
+div#svgcanvas > div.animation_cmds > div.stop {
+  left: 41px;
+}
+div#svgcanvas > div.animation_cmds > div > div {
+  position: absolute;
+  left: 9px;
+  top: 6px;
+  z-index: 1;
+  background-color: lightgray;
+}
+
+div#svgcanvas > div.animation_cmds > div.play {
+  cursor: pointer;
+}
+div#svgcanvas > div.animation_cmds > div.play > div {
+  width: 0;
+  height: 0;
+  border-top: 12px solid transparent;
+  border-left: 19px solid gray;
+  border-bottom: 12px solid transparent;
+}
+
+div#svgcanvas > div.animation_cmds > div.pause {
+  cursor: pointer;
+  display: none;
+}
+div#svgcanvas > div.animation_cmds > div.pause > div {
+  box-sizing: border-box;
+  width: 19px;
+  height: 24px;
+  border: 5px solid gray;
+  border-width: 0 8px;
+}
+
+div#svgcanvas > div.animation_cmds > div.stop > div {
+  top: 9px;
+  width: 19px;
+  height: 19px;
+  background-color: gray;
+  opacity: 0.5;
+}
+
+div#svgcanvas > div.animation_cmds.play > div.play {
+  display: none;
+}
+div#svgcanvas > div.animation_cmds.play > div.pause {
+  display: block;
+}
+div#svgcanvas > div.animation_cmds.play > div.stop {
+  cursor: pointer;
+}
+div#svgcanvas > div.animation_cmds.play > div.stop > div {
+  opacity: 1;
+}
+
+div#svgcanvas > div.animation_cmds.pause > div.stop {
+  cursor: pointer;
+}
+div#svgcanvas > div.animation_cmds.pause > div.stop > div {
+  opacity: 1;
 }
 
 #svgmenu {
@@ -79,31 +161,6 @@ function init() {
     return false;
   });
 
-  // backlinks
-  var elem, i, name, parts, pos,
-      elemsLnks = document.querySelectorAll('#header > a');
-  if (elemsLnks) {
-    for (i = 0; i < elemsLnks.length; ++i) {
-      elem = elemsLnks[i];
-
-      parts = location.pathname.split('/');
-      if (parts && parts.length) {
-        name = parts[parts.length - 1];
-        pos = name.indexOf('.');
-        if (pos > -1) {
-          name = name.substr(0, pos);
-        }
-        if (name) {
-          name = encodeURIComponent(name.toLowerCase());
-          elem.setAttribute(
-            'href',
-            elem.getAttribute('href') + '#anchor_' + name
-          );
-        }
-      }
-    }
-  }
-
   // get scripts and evaluate them
   var elemTpl = document.querySelector('#svg_script');
   if (elemTpl) {
@@ -111,12 +168,58 @@ function init() {
   }
 
   // check for menu, if any: init it
-  var elemCanvas = document.querySelector('div.canvas_svg'),
+  var elemCanvas = document.querySelector('div#svgcanvas'),
       elemMenu = document.querySelector('#svgmenu');
   if (elemCanvas && elemMenu) {
     svgviewer.menuHandler = menuHandler;
     svgviewer.initContextMenu(elemCanvas);
   }
+
+  // handle animation
+  var i, mode = '',
+      anim = document.querySelector('div#svgcanvas > div.animation_cmds'),
+      btns = anim.querySelectorAll('div'),
+      handler = function(event) {
+        var mode = anim.className.indexOf('play') > -1 ? 'play'
+          : (anim.className.indexOf('pause') > -1 ? 'pause' : 'stop'),
+            cmd = '',
+            nextMode = '';
+
+        switch (this.className) {
+          case 'play':
+            if (mode == 'stop' || mode == 'pause') {
+              cmd = 'play';
+              nextMode = 'animation_cmds play';
+            }
+            break;
+          case 'pause':
+            if (mode == 'play') {
+              cmd = 'pause';
+              nextMode = 'animation_cmds pause';
+            }
+            break;
+          case 'stop':
+            if (mode == 'play' || mode == 'pause') {
+              cmd = 'stop';
+              nextMode = 'animation_cmds';
+            }
+            break;
+          // no-default
+        }
+
+        if (nextMode && cmd) {
+          console.log(cmd);
+          anim.className = nextMode;
+
+          // TODO set animation mode
+        }
+      };
+  for (i = 0; i < btns.length; ++i) {
+    btns[i].addEventListener('click', handler);
+  }
+
+  // init viewer
+  svgviewer.init('svgcanvas');
 }
 
 function menuHandler(fullkey, state) {
@@ -128,7 +231,7 @@ function menuHandler(fullkey, state) {
 <body onload="init();">
 <div class="container">
 <div id="header">{include{header}}</div>
-<div class="canvas_svg">{{svg}}</div>
+<div id="svgcanvas">{include{animation}}{{svg}}</div>
 <div id="footer">{include{footer}}</div>
 </div>
 </body>
