--- a/u11/index.html
+++ b/u11/index.html
@@ -26,37 +26,43 @@ function init() {
 </head>
 <body onload="init();">
   <div id="header">
-  <a href="/ov.html#anchor_grundlagen_u11" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <a href="/ov.html#grundlagen_u11" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
   <div class="title">Grundlagen</div>
-  <a href="/ov.html#anchor_grundlagen_u11" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <a href="/ov.html#grundlagen_u11" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
   </div>
 
   <h1 class="tactics">Annahme und Verteidigung</h1>
   <table class="tactics" align="center" cellspacing="0" cellpadding="10">
     <tr>
-      <td><a href="/imageview.html?u11/image/ich-zu-mir.png"><h3>Ich! &nbsp; Zu mir!</h3></a></td>
+      <td><a id="2x_spielen" href="2x_spielen.html"><h3>2x Spielen</h3></a></td>
     </tr>
     <tr>
-      <td><a href="/imageview.html?u11/image/ich-zu-mir.png"><img src="image/ich-zu-mir.png" alt="Annahme, Verteidigung ohne Block"></a></td>
-    </tr>
-    <tr>
-      <td><a href="/imageview.html?u11/image/ich-zu-mir.png"><div>Die Annahme des gegnerischen Service und die Verteidigung ohne Block.</div></a></td>
+      <td><a href="2x_spielen.html"><img src="2x_spielen.png" alt="2x spielen"></a></td>
     </tr>
   </table>
 
+  <table class="tactics" align="center" cellspacing="0" cellpadding="10">
+    <tr>
+      <td><a id="aussenfuss" href="aussenfuss.html"><h3>Außenfuß</h3></a></td>
+      <td><a id="ich_zu_mir" href="ich_zu_mir.html"><h3>Ich!&nbsp; Zu mir!</h3></a></td>
+    </tr>
+    <tr>
+      <td><a href="aussenfuss.html"><img src="aussenfuss.png" alt="Außenfuß"></a></td>
+      <td><a href="ich_zu_mir.html"><img src="ich_zu_mir.png" alt="Ich!  Zu mir!"></a></td>
+    </tr>
+  </table>
+
+
   <h1 class="tactics">Angriff</h1>
   <table class="tactics" align="center" cellspacing="0" cellpadding="10">
-
     <tr>
-      <td><a href="/imageview.html?u11/image/tomjerry.png"><h3>Tom + Jerry</h3></a></td>
-      <td><a href="/imageview.html?u11/image/mickymaus.png"><h3>Micky Maus</h3></a></td>
+      <td><a id="tomjerry" href="/imageview.html?u11/image/tomjerry.png"><h3>Tom + Jerry</h3></a></td>
+      <td><a id="mickymaus" href="/imageview.html?u11/image/mickymaus.png"><h3>Micky Maus</h3></a></td>
     </tr>
-
     <tr>
       <td><a href="/imageview.html?u11/image/tomjerry.png"><img src="image/tomjerry.png" alt="Angriff Tom & Jerry"></a></td>
       <td><a href="/imageview.html?u11/image/mickymaus.png"><img src="image/mickymaus.png" alt="Angriff Micky Maus"></a></td>
     </tr>
-
     <tr>
       <td><a href="/imageview.html?u11/image/tomjerry.png"><div>Kurze Angriffe vor die Füße der Gegnerin.</div></a></td>
       <td><a href="/imageview.html?u11/image/mickymaus.png"><div>Angriffe zwischen die gegnerischen Spielerinnen.</div></a></td>
